website/versioned_docs/version-2.0.0/shipping-admin.md
---
id: version-2.0.0-shipping-admin
title: Shipping
original_id: shipping-admin
---

Reaction comes with a simple flat rate shipping plugin. To manage your shipping rates, click on the **Shipping icon** <i class="rui font-icon fa fa-truck"></i>.

Your store comes with three default shipping methods: `Free`, `Standard`, and `Priority`. To edit any of these rates, click on the row. To delete a rate, click on **Delete**.

Confused? See [Concepts: Fulfillment](concepts-fulfillment.md)

## Tutorial: How To Configure Flat Rate Shipping in Reaction

[![Tutorial: How To Configure Shipping in Reaction](/assets/guide-shipping-video-screenshot.png)](https://www.youtube.com/watch?v=fiR_kV1GBdg)

## Adding a new shipping method

![](/assets/admin-dashboard-shipping-2.png "Reaction Commerce Shipping")

1. Click the plus <i class="font-icon fa fa-plus"></i>.
2. Fill out the following:

    - Method Name: A unique (per shop) identifier
    - Cost: The cost, as a shop owner, to ship this item.
    - Public Label: How your rate name appears to your customers.
    - Handling: The handling price to charge for this shipping method at checkout.
    - Group: Choose `Ground`, `Priority`, `One Day` or `Free`.
    - Rate: The shipping price to charge for this shipping method at checkout.
    - Enabled: Check this to enable this option.

3. Click **Save Changes**.
